--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1336,6 +1336,16 @@
 				<key>Arguments</key>
 				<string></string>
 			</dict>
+			<dict>
+				<key>Enabled</key>
+				<true/>
+				<key>Path</key>
+				<string>HfsPlus.efi</string>
+				<key>Arguments</key>
+				<string></string>
+				<key>Comment</key>
+				<string>HfsPlus.efi</string>
+			</dict>
 		</array>
 		<key>Input</key>
 		<dict>
